气象站和折线图

--- a/SFJ/app/src/main/res/layout/view_commont_layout.xml
+++ b/SFJ/app/src/main/res/layout/view_commont_layout.xml
@@ -1,36 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="5dp"
     android:layout_width="match_parent"
-    android:layout_height="140dp">
+    android:layout_height="120dp">
 
-    <RelativeLayout
+    <android.support.v7.widget.CardView
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
         android:layout_width="match_parent"
-        android:layout_height="140dp">
+        android:layout_height="110dp"
+        android:background="@color/white"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp">
 
-        <ImageView
-            android:id="@+id/iv_head"
-            android:layout_margin="20dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
-
-        <TextView
-            android:textSize="20sp"
-            android:id="@+id/tv_name"
-            android:layout_margin="20dp"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-
-        <com.github.mikephil.charting.charts.HorizontalBarChart
-            android:layout_margin="20dp"
-            android:layout_alignParentBottom="true"
-            android:id="@+id/mHorizontalBarChart"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp" />
-    </RelativeLayout>
+            android:layout_height="110dp">
 
-</android.support.v7.widget.CardView>
+            <ImageView
+                android:id="@+id/iv_head"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="10dp" />
+
+            <TextView
+                android:textColor="@color/black"
+                android:id="@+id/tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_margin="10dp"
+                android:textSize="18sp" />
+
+            <com.github.mikephil.charting.charts.HorizontalBarChart
+                android:id="@+id/mHorizontalBarChart"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_alignParentBottom="true"
+                android:layout_margin="10dp" />
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+</RelativeLayout>
