--- a/SFJ/app/src/main/res/layout/fragment_weather.xml
+++ b/SFJ/app/src/main/res/layout/fragment_weather.xml
@@ -1,17 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.sfj.sfj.widget.CommentCardLayout
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="5dp"
-        android:id="@+id/card_weather"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </com.sfj.sfj.widget.CommentCardLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <com.sfj.sfj.widget.CommentCardLayout
+            android:id="@+id/card_temperature"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></com.sfj.sfj.widget.CommentCardLayout>
+
+        <com.sfj.sfj.widget.CommentCardLayout
+            android:id="@+id/card_humidity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></com.sfj.sfj.widget.CommentCardLayout>
+
+        <com.sfj.sfj.widget.CommentCardLayout
+            android:id="@+id/card_sun"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></com.sfj.sfj.widget.CommentCardLayout>
+
+        <com.sfj.sfj.widget.CommentCardLayout
+            android:id="@+id/card_air_pressure"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></com.sfj.sfj.widget.CommentCardLayout>
+
+        <com.sfj.sfj.widget.CommentCardLayout
+            android:id="@+id/card_rain"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></com.sfj.sfj.widget.CommentCardLayout>
+
+        <com.sfj.sfj.widget.CommentCardLayout
+            android:id="@+id/card_soil_temperature"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></com.sfj.sfj.widget.CommentCardLayout>
+
+        <com.sfj.sfj.widget.CommentCardLayout
+            android:layout_marginBottom="20dp"
+            android:id="@+id/card_soil_humidity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </com.sfj.sfj.widget.CommentCardLayout>
+    </LinearLayout>
+</ScrollView>
