--- a/SFJ/app/src/main/res/layout/fragment_machine.xml
+++ b/SFJ/app/src/main/res/layout/fragment_machine.xml
@@ -1,6 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <android.support.v7.widget.CardView
+        android:layout_margin="20dp"
+        app:cardCornerRadius="2dp"
+        app:cardElevation="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="40dp">
+
+        <TextView
+            android:textColor="@color/black"
+            android:id="@+id/tv_name"
+            android:textSize="18sp"
+            android:text="施肥机1"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="20dp"
+            android:layout_gravity="center_vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
+        <TextView
+            android:id="@+id/tv_state"
+            android:layout_marginRight="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:textSize="18sp"
+            android:text="离线"
+            android:layout_gravity="right|center_vertical"
+            android:background="@drawable/button_bg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </android.support.v7.widget.CardView>
+
+    <com.sfj.sfj.widget.CommentCardLayoutSHJ
+        android:id="@+id/sfj_ec"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.sfj.sfj.widget.CommentCardLayoutSHJ>
+
+    <com.sfj.sfj.widget.CommentCardLayoutSHJ
+        android:layout_marginTop="5dp"
+        android:id="@+id/sfj_ph"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.sfj.sfj.widget.CommentCardLayoutSHJ>
+
+    <com.sfj.sfj.widget.CommentCardLayoutSHJ
+        android:layout_marginTop="5dp"
+        android:id="@+id/sfj_ssll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.sfj.sfj.widget.CommentCardLayoutSHJ>
+
+    <com.sfj.sfj.widget.CommentCardLayoutSHJ
+        android:layout_marginTop="5dp"
+        android:id="@+id/sfj_ljll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.sfj.sfj.widget.CommentCardLayoutSHJ>
+
+    <com.sfj.sfj.widget.CommentCardLayoutSHJ
+        android:layout_marginTop="5dp"
+        android:id="@+id/sfj_kpa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.sfj.sfj.widget.CommentCardLayoutSHJ>
+
+    <com.sfj.sfj.widget.CommentCardLayoutSHJ
+        android:layout_marginTop="5dp"
+        android:id="@+id/sfj_yw"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </com.sfj.sfj.widget.CommentCardLayoutSHJ>
 </LinearLayout>
