--- a/SFJ/app/src/main/res/layout/activity_login.xml
+++ b/SFJ/app/src/main/res/layout/activity_login.xml
@@ -42,6 +42,8 @@
         android:layout_height="wrap_content" />
 
     <TextView
+        android:padding="5dp"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:id="@+id/tv_register"
         android:layout_marginTop="15dp"
