--- a/SFJ/app/src/main/res/drawable/shape_login_bg.xml
+++ b/SFJ/app/src/main/res/drawable/shape_login_bg.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="5dp"></corners>
-    <solid android:color="@color/white"></solid>
+    <solid android:color="@color/transluent"></solid>
     <stroke android:color="@color/line" android:width="0.5dp"></stroke>
 </shape>
