登录注册界面

--- a/SFJ/app/src/main/res/values/colors.xml
+++ b/SFJ/app/src/main/res/values/colors.xml
@@ -24,6 +24,7 @@
     <color name="color_7894e7">#7894e7</color>
     <color name="color_a9a9a9">#a9a9a9</color>
     <color name="transluent">#0000</color>
+    <color name="transluent_a">#99ffffff</color>
     <color name="color_FFB358">#FFB358</color>
     <color name="color_F1F1F1">#F1F1F1</color>
     <color name="update_version">#4ea8ed</color>
