--- a/SFJ/app/src/main/res/layout/fragment_control.xml
+++ b/SFJ/app/src/main/res/layout/fragment_control.xml
@@ -75,7 +75,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:padding="5dp"
-                android:text="1号" />
+                android:text="1号"
+                android:textSize="18sp"/>
 
             <TextView
                 android:id="@+id/tv_js2"
@@ -99,6 +100,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/tv_xf_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -107,6 +109,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/tv_xf_2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -115,6 +118,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/tv_xf_3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -123,6 +127,7 @@
                 android:textSize="18sp" />
 
             <TextView
+                android:id="@+id/tv_xf_4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
