--- a/SFJ/app/src/main/res/layout/item_text_view.xml
+++ b/SFJ/app/src/main/res/layout/item_text_view.xml
@@ -5,11 +5,10 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:layout_margin="10dp"
-        android:background="@drawable/select_bg_gray"
+        android:textColor="@color/black"
+        android:gravity="center"
+        android:background="@drawable/icon_control_check"
         android:id="@+id/tv_1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:textSize="18sp" />
+        android:layout_width="90dp"
+        android:layout_height="60dp" />
 </LinearLayout>
